fixed alignment issues

--- a/the_gathering/static/css/main_style.css
+++ b/the_gathering/static/css/main_style.css
@@ -283,6 +283,7 @@ span {
     justify-content: center;
     position: fixed;
     top: 0px;
+    left: 0px;
     width: 100vw;
     background-color: rgba(0, 0, 0, 1);
 }
